# openapi/openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.1.0
 info:
   title: 연금술사 Prototype API
-  version: 0.1.0
+  version: 0.1.1
 paths:
   /api/v1/auth/login:
     post:
@@ -237,6 +237,32 @@ paths:
               $ref: '#/components/schemas/MemberInput'
       responses:
         '201':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+  /api/v1/projects/{project_id}/reviewer-candidates:
+    get:
+      summary: Reviewer Candidates
+      operationId: reviewer_candidates_api_v1_projects__project_id__reviewer_candidates_get
+      security:
+      - HTTPBearer: []
+      parameters:
+      - name: project_id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+          title: Project Id
+      responses:
+        '200':
           description: Successful Response
           content:
             application/json:
